# sqlink-shim-codegen

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/emit/: mod.rs
src/wasm_target/: dispatch.rs  emit_cargo.rs  emit_lib.rs  emit_readme.rs  emit_wit.rs  mod.rs
