[package]
name = "sqlink-shim-codegen"
version = "0.1.0"
edition = "2021"
description = "Generate a SQLite extension (loaded via sqlite3_extension_init) that bridges DataFission wasm shims (PostGIS, MobilityDB) into SQLite as native functions/aggregates/types/operators. Reads a shim-interface SQLite database via shim-bridge-codegen-core's BridgePlan."
license = "Apache-2.0"

[[bin]]
name = "sqlink-shim-codegen"
path = "src/main.rs"

[lib]
name = "sqlink_shim_codegen"
path = "src/lib.rs"

[dependencies]
shim-bridge-codegen-core = { path = "../shim-bridge-codegen-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
